# final-bot

./: .gitignore  01_EXECUTIVE_SUMMARY.md  02_STRATEGY_SOUNDNESS.md  03_EXECUTION_CORRECTNESS.md  04_LATENCY_AND_PERFORMANCE.md  05_RISK_AND_FAILURE_MODES.md  06_POLYMARKET_SPECIFIC_ISSUES.md  07_ACTIONABLE_FIXES_AND_REFACTORING.md  AGENTS.md  APPENDIX_ALPHA_UPDATES.md  Cargo.toml  FULL_SPEC.md  RISK_REGISTER.md  TASK_BREAKDOWN.md  TECH_SPEC.md  TODO.md
.github/workflows/: ci.yml
fixtures/: user_ws_reject.json
ops/aws/: README.md  pmmm.env.example  pmmm_aws.sh
ops/review/: make_one_sided_fills_bundle.sh
review/: CODE_REVIEW_00_EXEC_SUMMARY.md  CODE_REVIEW_01_CRITICAL_FIXES.md  CODE_REVIEW_02_EXECUTION_ORDER_LIFECYCLE.md  CODE_REVIEW_03_WS_STATE_MANAGEMENT.md  CODE_REVIEW_05_STRATEGY_ALPHA_EDGE.md  CODE_REVIEW_06_TASK_BREAKDOWN.md
review/v2/: CODE_REVIEW_V2_00_EXEC_SUMMARY.md  CODE_REVIEW_V2_01_DELTA_CHECKLIST.md  CODE_REVIEW_V2_02_CRITICAL_FIXES.md  CODE_REVIEW_V2_03_EXECUTION_ORDER_LIFECYCLE.md  CODE_REVIEW_V2_04_WS_STATE_MANAGEMENT.md  CODE_REVIEW_V2_05_PERFORMANCE_LATENCY.md  CODE_REVIEW_V2_06_STRATEGY_ALPHA_EDGE.md  CODE_REVIEW_V2_07_TASK_BREAKDOWN.md
src/: config.rs  error.rs  main.rs  market_discovery.rs  reconciliation.rs  time.rs
src/alpha/: mod.rs  probability.rs  target_total.rs  toxicity.rs  volatility.rs
src/clients/: clob_public.rs  clob_rest.rs  clob_ws_market.rs  clob_ws_user.rs  data_api.rs  gamma.rs  geoblock.rs  mod.rs  rtds_ws.rs
src/execution/: batch.rs  completion.rs  mod.rs  order_manager.rs
src/inventory/: desync_watchdog.rs  engine.rs  mod.rs  onchain.rs
src/ops/: health.rs  logging.rs  metrics.rs  mod.rs  shutdown.rs  tls.rs
src/persistence/: event_log.rs  mod.rs  replay.rs  runtime.rs
src/resolution/: mod.rs  redeemer.rs
src/state/: book.rs  inventory.rs  market_state.rs  mod.rs  order_state.rs  rtds_price.rs  state_manager.rs
src/strategy/: engine.rs  fee.rs  mod.rs  quote_engine.rs  reward_engine.rs  risk.rs
